# webeye.downtime-service

./: pyproject.toml
src/: context.py  exceptions.py  main.py  settings.py
src/auth/: dependencies.py  model.py  utils.py
src/downtimes/: exceptions.py  persistence.py  service.py
src/routers/: downtimes.py
